<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/iv_negara"
        android:layout_width="344dp"
        android:layout_height="139dp"
        android:layout_margin="@dimen/small_margin"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="150sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Negara"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Pemimpin"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Bahasa"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Ibukota"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Luas"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Lagu"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Sejarah"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_negara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/negara"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_pemimpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/pemimpin"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_bahasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/bahasa"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_ibukota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/ibukota"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_luas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/luas"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_lagu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/lagu"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sejarah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/sejarah"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>